--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hamburgueria - Clientes</title>
+    <title>Hamburgueria</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <h1>Hamburgueria - Clientes</h1>
+    <h1>Hamburgueria</h1>
 
     <nav>
         <button id="btn-cadastrar" onclick="showCadastrar()">Cadastrar</button>
