--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hamburgueria</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="frontend/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -84,6 +84,6 @@
         </form>
     </div>
 
-    <script src="script.js"></script> <!-- Mantenha aqui -->
+    <script src="frontend/script.js"></script> <!-- Mantenha aqui -->
 </body>
 </html>
